Completed Swagger API documentation
