# backend/docs/swagger.yaml
@@ -1,9 +1,487 @@
 basePath: /
+definitions:
+  auth.LoginRequest:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    type: object
+  auth.RegisterRequest:
+    properties:
+      email:
+        type: string
+      name:
+        type: string
+      password:
+        type: string
+    type: object
+  buses.Bus:
+    properties:
+      bus_name:
+        type: string
+      bus_number:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: string
+      route_id:
+        type: string
+      total_seats:
+        type: integer
+    type: object
+  buses.CreateBusRequest:
+    properties:
+      bus_name:
+        type: string
+      bus_number:
+        type: string
+      route_id:
+        type: string
+      total_seats:
+        type: integer
+    type: object
+  routes.CreateRouteRequest:
+    properties:
+      distance:
+        type: string
+      end_location:
+        type: string
+      start_location:
+        type: string
+    type: object
+  routes.Route:
+    properties:
+      created_at:
+        type: string
+      distance:
+        type: string
+      end_location:
+        type: string
+      id:
+        type: string
+      start_location:
+        type: string
+    type: object
+  schedules.CreateScheduleRequest:
+    properties:
+      arrival_time:
+        type: string
+      bus_id:
+        type: string
+      departure_time:
+        type: string
+    type: object
+  schedules.Schedule:
+    properties:
+      arrival_time:
+        type: string
+      bus_id:
+        type: string
+      created_at:
+        type: string
+      departure_time:
+        type: string
+      id:
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact: {}
   description: SmartTransit Backend APIs
   title: SmartTransit Bus API
   version: "1.0"
-paths: {}
+paths:
+  /api/auth/login:
+    post:
+      consumes:
+      - application/json
+      description: Login and receive JWT token
+      parameters:
+      - description: User Login
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/auth.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Login user
+      tags:
+      - Auth
+  /api/auth/profile:
+    get:
+      description: Protected profile route
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: User profile
+      tags:
+      - Auth
+  /api/auth/register:
+    post:
+      consumes:
+      - application/json
+      description: Create new user account
+      parameters:
+      - description: User Register
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/auth.RegisterRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Register user
+      tags:
+      - Auth
+  /api/buses/:
+    get:
+      description: Retrieve all buses
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/buses.Bus'
+            type: array
+      summary: Get all buses
+      tags:
+      - Buses
+    post:
+      consumes:
+      - application/json
+      description: Create new bus
+      parameters:
+      - description: Create Bus
+        in: body
+        name: bus
+        required: true
+        schema:
+          $ref: '#/definitions/buses.CreateBusRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Create bus
+      tags:
+      - Buses
+  /api/buses/{id}:
+    delete:
+      description: Delete bus
+      parameters:
+      - description: Bus ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Delete bus
+      tags:
+      - Buses
+    get:
+      description: Retrieve single bus
+      parameters:
+      - description: Bus ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/buses.Bus'
+      summary: Get bus by ID
+      tags:
+      - Buses
+    put:
+      consumes:
+      - application/json
+      description: Update existing bus
+      parameters:
+      - description: Bus ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Update Bus
+        in: body
+        name: bus
+        required: true
+        schema:
+          $ref: '#/definitions/buses.Bus'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Update bus
+      tags:
+      - Buses
+  /api/routes/:
+    get:
+      description: Retrieve all routes
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/routes.Route'
+            type: array
+      summary: Get all routes
+      tags:
+      - Routes
+    post:
+      consumes:
+      - application/json
+      description: Create new route
+      parameters:
+      - description: Create Route
+        in: body
+        name: route
+        required: true
+        schema:
+          $ref: '#/definitions/routes.CreateRouteRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Create route
+      tags:
+      - Routes
+  /api/routes/{id}:
+    delete:
+      description: Delete route
+      parameters:
+      - description: Route ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Delete route
+      tags:
+      - Routes
+    get:
+      description: Retrieve single route
+      parameters:
+      - description: Route ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/routes.Route'
+      summary: Get route by ID
+      tags:
+      - Routes
+    put:
+      consumes:
+      - application/json
+      description: Update existing route
+      parameters:
+      - description: Route ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Update Route
+        in: body
+        name: route
+        required: true
+        schema:
+          $ref: '#/definitions/routes.Route'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Update route
+      tags:
+      - Routes
+  /api/schedules/:
+    get:
+      description: Retrieve all schedules
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/schedules.Schedule'
+            type: array
+      summary: Get all schedules
+      tags:
+      - Schedules
+    post:
+      consumes:
+      - application/json
+      description: Create new schedule
+      parameters:
+      - description: Create Schedule
+        in: body
+        name: schedule
+        required: true
+        schema:
+          $ref: '#/definitions/schedules.CreateScheduleRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Create schedule
+      tags:
+      - Schedules
+  /api/schedules/{id}:
+    delete:
+      description: Delete schedule
+      parameters:
+      - description: Schedule ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Delete schedule
+      tags:
+      - Schedules
+    get:
+      description: Retrieve single schedule
+      parameters:
+      - description: Schedule ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/schedules.Schedule'
+      summary: Get schedule by ID
+      tags:
+      - Schedules
+    put:
+      consumes:
+      - application/json
+      description: Update existing schedule
+      parameters:
+      - description: Schedule ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Update Schedule
+        in: body
+        name: schedule
+        required: true
+        schema:
+          $ref: '#/definitions/schedules.Schedule'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Update schedule
+      tags:
+      - Schedules
+securityDefinitions:
+  BearerAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
