# backend/internal/auth/auth_handler.go
@@ -6,6 +6,15 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// Register godoc
+// @Summary Register user
+// @Description Create new user account
+// @Tags Auth
+// @Accept json
+// @Produce json
+// @Param user body RegisterRequest true "User Register"
+// @Success 200 {object} map[string]interface{}
+// @Router /api/auth/register [post]
 func Register(c *gin.Context) {
 
 	var request RegisterRequest
@@ -31,6 +40,15 @@ func Register(c *gin.Context) {
 	})
 }
 
+// Login godoc
+// @Summary Login user
+// @Description Login and receive JWT token
+// @Tags Auth
+// @Accept json
+// @Produce json
+// @Param user body LoginRequest true "User Login"
+// @Success 200 {object} map[string]interface{}
+// @Router /api/auth/login [post]
 func Login(c *gin.Context) {
 
 	var request LoginRequest
@@ -56,6 +74,14 @@ func Login(c *gin.Context) {
 	})
 }
 
+// Profile godoc
+// @Summary User profile
+// @Description Protected profile route
+// @Tags Auth
+// @Security BearerAuth
+// @Produce json
+// @Success 200 {object} map[string]interface{}
+// @Router /api/auth/profile [get]
 func Profile(c *gin.Context) {
 
 	userID, _ := c.Get("user_id")
